[gd_scene load_steps=3 format=3 uid="uid://uieifwy4p87"]

[ext_resource type="Theme" uid="uid://b1gn4b5160x3t" path="res://themes/main_theme.tres" id="1_q7xtp"]
[ext_resource type="Script" path="res://FrameDisplayItem.gd" id="1_ss1i3"]

[node name="FrameDisplayItem" type="ProgressBar"]
custom_minimum_size = Vector2(2.08165e-12, 16)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme = ExtResource("1_q7xtp")
show_percentage = false
script = ExtResource("1_ss1i3")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
